--- a/kubernetes/components/mongo.yaml
+++ b/kubernetes/components/mongo.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: lts-mongo
         image: jakekara/lts-mongo:latest
+        imagePullPolicy: Always
         # resources:
         #   limits:
         #     cpu: 1000m
